# src/app/Mypage/mypageRoute.js
@@ -20,8 +20,8 @@ router.get('/record', mypage.getExerciseRecord);
 // 4. 유저 정보 조회(
 router.get('/userinfo',jwtMiddleware, mypage.getUserData);
 
-// 5. 유저 정보 업데이트(
-//router.patch('/', mypage.updateUserData);
+// 5. 유저 정보 업데이트
+router.put('/updateuser', jwtMiddleware, mypage.updateUserData);
 
 // 6. 비밀번호 수정
 //router.patch('/', mypage.updatePassword);
