# src/app/Mypage/mypageSwagger.yaml
@@ -51,6 +51,35 @@ tags:
                     type: string
                   description: 유저info
 
+/app/mypage/updateuser:
+  put:
+    summary: userinfo 수정 api
+    description: 쿠키에 가지고 있는 토큰(유저)으로 userinfo 수정하는 api
+    tags:
+      - Mypage
+    requestBody:
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              userNickname:
+                type: string
+                example: 초코맛 프로틴
+                description: 수정할 유저 닉네임
+              birthYear:
+                type: integer
+                example: 1995
+                description: 수정할 생년
+    responses:
+      '1000':
+        description: 성공
+      '701':
+        description: 수정할 유저 닉네임을 입력해 주세요.
+      '702':
+        description: 수정할 생년을 입력해 주세요.
+
 
 # components:
 #   schemas:
